--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,229 +1,537 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+.navBarBG1 {
+  background: rgb(15, 43, 75);
+  background: linear-gradient(
+    180deg,
+    rgba(15, 43, 75, 0.6) 0%,
+    rgba(15, 43, 75, 0) 100%
+  );
+  backdrop-filter: blur(0.05vw);
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
+.section1 {
+  background: rgb(3, 8, 17);
+  background: linear-gradient(
+    180deg,
+    rgba(3, 8, 17, 1) 0%,
+    rgba(15, 44, 78, 1) 100%
+  );
+  background-repeat: no-repeat;
+  height: calc((100vw / 16) * 9);
   position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: var(--max-width);
-  width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
+.section1 .gr1 {
   position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: 20vw;
+  background: rgb(14, 39, 67);
+  background: linear-gradient(
+    0deg,
+    rgba(14, 39, 67, 1) 0%,
+    rgba(15, 42, 74, 0) 100%
+  );
 }
 
-.logo {
+.section1 .galaxyContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.section1 .galaxyContainer .galaxyBox {
+  width: 8vw;
+  height: 8vw;
+}
+
+.section1 .galaxyContainer .galaxyBox img {
+  width: 8vw;
+  height: 8vw;
+  mix-blend-mode: overlay;
+}
+
+.section1 .headerContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+  line-height: 8vw;
+}
+
+.section1 .headerContainer h1 {
+  margin-top: 9vw;
+}
+.section1 .headerContainer .headerText {
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 13.5vw;
+}
+
+.section1 .headerContainer .text1 {
+  background: rgb(183, 222, 251);
+  background: linear-gradient(
+    180deg,
+    rgba(183, 222, 251, 1) 0%,
+    rgba(107, 176, 226, 1) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.section1 .headerContainer .text2 {
+  background: rgb(87, 164, 220);
+  background: linear-gradient(
+    180deg,
+    rgba(87, 164, 220, 1) 0%,
+    rgba(10, 117, 194, 1) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.section2 {
+  background: rgb(14, 39, 67);
+  background: linear-gradient(
+    180deg,
+    rgba(14, 39, 67, 1) 0%,
+    rgba(160, 0, 164, 1) 100%
+  );
+  background-repeat: no-repeat;
+  height: auto;
   position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+  padding: 0 6vw;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.section2 .box1 {
+  background: rgb(41, 115, 197);
+  background: linear-gradient(
+    180deg,
+    rgba(41, 115, 197, 1) 0%,
+    rgba(160, 0, 164, 0) 50%
+  );
+  border-radius: 3.5vw;
+  width: 100%;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+.section2 .box1 .header {
+  text-transform: uppercase;
+  font-size: 4vw;
+  font-family: "Tapas";
+  color: #ffffff;
+  text-align: center;
+  line-height: 4vw;
+  padding: 3vw 0 0 0;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.section2 .box1 .description {
+  font-size: 2vw;
+  color: #ffffff;
+  text-align: center;
+  line-height: 2.5vw;
+  padding: 0 4vw;
+  margin: 3vw auto;
+  font-weight: 300;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.section2 .box1 .boxImage {
+  padding: 0 4vw;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.section2 .box1 .boxImage img {
+  width: 100%;
+}
+
+.section2 .box2 {
+  background: rgb(24, 8, 45);
+  background: linear-gradient(
+    180deg,
+    rgba(24, 8, 45, 1) 0%,
+    rgba(24, 8, 45, 0) 50%
+  );
+  border-radius: 3.5vw;
+  width: 100%;
+  margin-top: 5vw;
+}
+
+.section2 .box2 .header {
+  text-transform: uppercase;
+  font-size: 4vw;
+  font-family: "Tapas";
+  color: #ff91ff;
+  text-align: center;
+  line-height: 4vw;
+  padding: 3vw 0 0 0;
+}
+
+.section2 .box2 .description {
+  font-size: 2vw;
+  color: #ff91ff;
+  text-align: center;
+  line-height: 2.5vw;
+  padding: 0 4vw;
+  margin: 3vw auto;
+  font-weight: 300;
+}
+
+.section2 .box2 .boxImage {
+  padding: 0 4vw;
+}
+
+.section2 .box2 .boxImage img {
+  width: 100%;
+}
+
+.section3 {
+  background: rgb(160, 0, 164);
+  background: linear-gradient(
+    180deg,
+    rgba(160, 0, 164, 1) 20%,
+    rgba(251, 146, 7, 1) 50%,
+    rgba(218, 13, 0, 1) 99%
+  );
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 5vw 0 3vw 0;
+  box-sizing: border-box;
+}
+
+.section3 .boxWrapper {
+  padding: 0 6vw;
+  box-sizing: border-box;
+}
+
+.section3 .box1 {
+  background: rgb(24, 8, 45);
+  background: linear-gradient(
+    180deg,
+    rgba(24, 8, 45, 1) 0%,
+    rgba(24, 8, 45, 0) 50%
+  );
+  border-radius: 3.5vw;
+  width: 100%;
+  position: relative;
+  z-index: 100;
+}
+
+.section3 .box1 .header {
+  text-transform: uppercase;
+  font-size: 4vw;
+  font-family: "Tapas";
+  color: #ff91ff;
+  text-align: center;
+  line-height: 4vw;
+  padding: 3vw 0 0 0;
+}
+
+.section3 .box1 .description {
+  font-size: 2vw;
+  color: #ff91ff;
+  text-align: center;
+  line-height: 2.5vw;
+  padding: 0 4vw;
+  margin: 3vw auto;
+  font-weight: 300;
+}
+
+.section3 .box1 .imgContainer {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.section3 .box1 .imgContainer .imgBox {
+  width: 50%;
+  height: 50%;
+  text-align: center;
+}
+
+.section3 .box1 .imgContainer .imgBox img {
+  width: 90%;
+}
+
+.section3 .galaxyContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100vw;
+  height: calc((100vw / 16) * 9);
+  position: absolute;
+  z-index: 98;
+  top: 35vw;
+  opacity: 0.2;
+}
+
+.section3 .galaxyContainer .galaxyBox {
+  width: 8vw;
+  height: 8vw;
+}
+
+.section3 .galaxyContainer .galaxyBox img {
+  width: 8vw;
+  height: 8vw;
+  mix-blend-mode: overlay;
+}
+
+.section3 .box2 {
+  background: linear-gradient(
+    180deg,
+    rgba(47.98, 0, 48.87, 0.4) 0%,
+    rgba(161.23, 115.08, 162.1, 0) 49%,
+    rgba(217.81, 13.07, 0, 0.4) 100%
+  );
+
+  border-radius: 3.5vw;
+  position: absolute;
+  z-index: 99;
+  width: 95vw;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 35vw;
+  padding-bottom: 7vw;
+  padding-top: 20vw;
+}
+
+.section3 .box2 .header {
+  text-transform: uppercase;
+  font-size: 5vw;
+  font-family: "Tapas";
+  color: #ffffff;
+  text-align: center;
+  line-height: 4vw;
+  padding: 3vw 0 0 0;
+}
+
+.section3 .box2 .description {
+  font-size: 2vw;
+  color: #ffffff;
+  text-align: center;
+  line-height: 2.5vw;
+  padding: 0 4vw;
+  margin: 3vw auto;
+  font-weight: 300;
+}
+
+.section3 .box3 {
+  display: flex;
+  position: relative;
+  margin-top: 43vw;
+  width: 95%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.section3 .box3 .menuContainer {
+  width: 30%;
+}
+
+.section3 .box3 .menuContainer .header {
+  color: #fff598;
+  font-size: 1.5vw;
+  font-style: italic;
+  font-weight: 600;
+}
+
+.section3 .box3 .menuContainer ul {
+  list-style: none;
+  padding: 0;
+  margin: 1vw 0 0 0;
+}
+
+.section3 .box3 .menuContainer ul li {
+  padding: 0 0 1vw 0;
+}
+
+.section3 .box3 .menuContainer ul li a {
+  color: #fff598;
+  font-size: 1vw;
+  text-decoration: none;
+  font-weight: 300;
+}
+
+.section3 .box3 .contactUsContainer {
+  width: 40%;
+  padding-right: 10%;
+  box-sizing: border-box;
+}
+
+.section3 .box3 .contactUsContainer .header {
+  color: #fff598;
+  font-size: 1.5vw;
+  font-style: italic;
+  font-weight: 600;
+}
+
+.section3 .box3 .contactUsContainer .companyName {
+  color: #fff598;
+  font-size: 1vw;
+  font-weight: 300;
+  margin-top: 1vw;
+}
+
+.section3 .box3 .contactUsContainer .phoneContainer {
+  margin-top: 1vw;
+  display: flex;
+  align-items: center;
+}
+
+.section3 .box3 .contactUsContainer .phoneContainer .iconContainer img {
+  width: 1vw;
+  height: 1vw;
+  display: block;
+}
+
+.section3 .box3 .contactUsContainer .phoneContainer .phone {
+  margin-left: 1vw;
+}
+
+.section3 .box3 .contactUsContainer .phoneContainer .phone a {
+  color: #fff598;
+  font-size: 1vw;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+.section3 .box3 .contactUsContainer .emailContainer {
+  margin-top: 1vw;
+  display: flex;
+  align-items: center;
+}
+
+.section3 .box3 .contactUsContainer .emailContainer .iconContainer img {
+  width: 1vw;
+  height: 1vw;
+  display: block;
+}
+
+.section3 .box3 .contactUsContainer .emailContainer .email {
+  margin-left: 1vw;
+}
+
+.section3 .box3 .contactUsContainer .emailContainer .email a {
+  color: #fff598;
+  font-size: 1vw;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+.section3 .box3 .contactUsContainer .addressContainer {
+  margin-top: 1vw;
+  display: flex;
+}
+
+.section3 .box3 .contactUsContainer .addressContainer .iconContainer img {
+  width: 1vw;
+  height: 1vw;
+  display: block;
+}
+
+.section3 .box3 .contactUsContainer .addressContainer .address {
+  margin-left: 1vw;
+  color: #fff598;
+  font-size: 1vw;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+.section3 .box3 .contactUsContainer .socialMediaContainer {
+  display: flex;
+  margin-top: 2vw;
+}
+
+.section3 .box3 .contactUsContainer .socialMediaContainer img {
+  width: 2vw;
+  height: 2vw;
+  margin-right: 1vw;
+}
+
+.section3 .box3 .contactFormContainer {
+  width: 30%;
+}
+
+.section3 .box3 .contactFormContainer .header {
+  color: #fff598;
+  font-size: 1.5vw;
+  font-style: italic;
+  font-weight: 600;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper {
+  margin-top: 1vw;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper .formGroup {
+  margin-bottom: 1vw;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper .formGroup input {
+  width: 100%;
+  background: none;
+  border: 0.1vw solid #fff598;
+  font-size: 0.8vw;
+  padding: 0.75vw 0.75vw;
+  box-sizing: border-box;
+  border-radius: 0.5vw;
+  color: #fff598;
+  font-style: italic;
+  font-family: inherit;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper .formGroup input:focus {
+  outline: none;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper .formGroup textarea {
+  width: 100%;
+  background: none;
+  font-size: 0.8vw;
+  padding: 0.75vw 0.75vw;
+  box-sizing: border-box;
+  border-radius: 0.5vw;
+  color: #fff598;
+  font-style: italic;
+  height: 7vw;
+  resize: none;
+  background: linear-gradient(180deg, #8c2b0c 0%, rgba(104.12, 0, 0, 0) 78%);
+  border: none;
+  font-family: inherit;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper .formGroup textarea:focus {
+  outline: none;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper .buttonRight {
+  text-align: right;
+}
+
+.section3 .box3 .contactFormContainer .formWrapper .formGroup button {
+  background: #661212;
+  border: none;
+  color: #fff598;
+  font-family: inherit;
+  font-size: 0.8vw;
+  text-transform: uppercase;
+  padding: 0.5vw 1vw;
+  border-radius: 1vw;
+}
+
+.section4 {
+  background: #5e1100;
+  height: 6vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2vw;
+  color: #fff598;
+  text-transform: uppercase;
 }
