--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -21,6 +21,10 @@
   height: 100%;
 }
 
+.navBarContainer .menuButtonContainer {
+  display: none;
+}
+
 .navBarContainer .menuContainer ul {
   display: flex;
   justify-content: center;
@@ -54,4 +58,53 @@
 .navBarContainer .menuContainer ul li.authBtn {
   border-radius: 5vw;
   border: 0.07vw white solid;
+}
+
+@media screen and (orientation: portrait) {
+  .navBarContainer {
+    height: 15vw;
+  }
+
+  .navBarContainer .logoContainer {
+    width: 15vw;
+  }
+
+  .navBarContainer .menuContainer ul {
+    display: block;
+  }
+
+  .navBarContainer .menuContainer {
+    display: none;
+    position: absolute;
+    right: 4vw;
+    top: 15vw;
+    width: 50vw;
+    background: #0f2c4d;
+    padding: 2vw;
+    box-shadow: 0.1vw 0.1vw 1.1vw 1.1vw rgba(0, 0, 0, 0.5);
+    border-radius: 2vw;
+  }
+
+  .navBarContainer .menuVisible {
+    display: block;
+  }
+
+  .navBarContainer .menuContainer ul li {
+    padding: 1.75vw 3vw;
+    margin: 2vw 0.5vw;
+    text-align: center;
+  }
+
+  .navBarContainer .menuContainer ul li a {
+    font-size: 3vw;
+  }
+
+  .navBarContainer .menuButtonContainer {
+    display: block;
+  }
+  .navBarContainer .menuButtonContainer img {
+    width: 11vw;
+    height: 7vw;
+    display: block;
+  }
 }
