--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -51,11 +51,11 @@
   width: 8vw;
   height: 8vw;
   mix-blend-mode: overlay;
+  transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
 .section1 .galaxyContainer .galaxyBox:hover img {
   transform: scale(2);
-  transition: transform 0.3s ease;
 }
 
 .section1 .headerContainer {
