--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -108,3 +108,114 @@
     display: block;
   }
 }
+
+.navBarContainer1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 9vw;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 3vw;
+  box-sizing: border-box;
+}
+
+.navBarContainer1 .logoContainer {
+  width: 10vw;
+}
+
+.navBarContainer1 .logoContainer img {
+  width: 100%;
+  height: 100%;
+}
+
+.navBarContainer1 .menuButtonContainer {
+  display: none;
+}
+
+.navBarContainer1 .menuContainer ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.navBarContainer1 .menuContainer ul li {
+  padding: 0.75vw 2vw;
+  box-sizing: border-box;
+  margin: 0 0.5vw;
+  cursor: pointer;
+}
+
+.navBarContainer1 .menuContainer ul li a {
+  color: #fff;
+  font-size: 1vw;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.navBarContainer1 .menuContainer ul li.active {
+  background: #0053a0;
+  box-shadow: 0 0.4vw 0.4vw rgba(0, 0, 0, 0.25);
+  border-radius: 5vw;
+  border: 0.07vw #8ed6ff solid;
+}
+
+.navBarContainer1 .menuContainer ul li.authBtn {
+  border-radius: 5vw;
+  border: 0.07vw white solid;
+}
+
+@media screen and (orientation: portrait) {
+  .navBarContainer1 {
+    height: 15vw;
+  }
+
+  .navBarContainer1 .logoContainer {
+    width: 15vw;
+  }
+
+  .navBarContainer1 .menuContainer ul {
+    display: block;
+  }
+
+  .navBarContainer1 .menuContainer {
+    display: none;
+    position: absolute;
+    right: 4vw;
+    top: 15vw;
+    width: 50vw;
+    background: #0f2c4d;
+    padding: 2vw;
+    box-shadow: 0.1vw 0.1vw 1.1vw 1.1vw rgba(0, 0, 0, 0.5);
+    border-radius: 2vw;
+  }
+
+  .navBarContainer1 .menuVisible {
+    display: block;
+  }
+
+  .navBarContainer1 .menuContainer ul li {
+    padding: 1.75vw 3vw;
+    margin: 2vw 0.5vw;
+    text-align: center;
+  }
+
+  .navBarContainer1 .menuContainer ul li a {
+    font-size: 3vw;
+  }
+
+  .navBarContainer1 .menuButtonContainer {
+    display: block;
+  }
+  .navBarContainer1 .menuButtonContainer img {
+    width: 11vw;
+    height: 7vw;
+    display: block;
+  }
+}
