--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -99,7 +99,7 @@
 
 .section1 .workContainer .registrationContainer .formContainer .formGroup {
   position: relative;
-  margin-bottom: 2vw;
+  margin-bottom: 1.5vw;
 }
 
 .section1
@@ -214,6 +214,7 @@
 
 .section1 .workContainer .registrationContainer .formContainer .btnContainer {
   text-align: center;
+  margin-top: 1vw;
 }
 
 .section1
@@ -237,6 +238,11 @@
   font-size: 0.9vw;
   font-style: italic;
   text-shadow: 0.1vw 0.1vw 0.1vw rgba(0, 0, 0, 0.5);
+}
+
+.section1 .workContainer .registrationContainer .formContainer .agreement {
+  font-size: 1vw;
+  color: #fff;
 }
 
 @media screen and (orientation: portrait) {
@@ -333,6 +339,10 @@
 
   .section1 .workContainer .registrationContainer .formContainer .error {
     margin-top: 0.7vw;
+    font-size: 2.5vw;
+  }
+
+  .section1 .workContainer .registrationContainer .formContainer .agreement {
     font-size: 2.5vw;
   }
 }
