--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -107,13 +107,23 @@
   .registrationContainer
   .formContainer
   .formGroup
+  .inputBox {
+  position: relative;
+}
+
+.section1
+  .workContainer
+  .registrationContainer
+  .formContainer
+  .formGroup
+  .inputBox
   .iconContainer1 {
   position: absolute;
   top: 0;
   left: 0;
   background: #cb57a1;
   width: 15%;
-  height: 3.5vw;
+  height: 100%;
   border-radius: 5vw;
   display: flex;
   text-align: center;
@@ -126,13 +136,14 @@
   .registrationContainer
   .formContainer
   .formGroup
+  .inputBox
   .iconContainer2 {
   position: absolute;
   top: 0;
   left: 0;
   background: #5e1a92;
   width: 15%;
-  height: 3.5vw;
+  height: 100%;
   border-radius: 5vw;
   display: flex;
   text-align: center;
@@ -245,6 +256,37 @@
   color: #fff;
 }
 
+.section1
+  .workContainer
+  .registrationContainer
+  .formContainer
+  .customCalendarContainer {
+  position: relative;
+}
+
+.section1
+  .workContainer
+  .registrationContainer
+  .formContainer
+  .customInlineCalendar {
+  position: absolute;
+  top: -10vw;
+  right: 0;
+  z-index: 1;
+}
+
+.section1 .workContainer .registrationContainer .formContainer .calIcon {
+  position: absolute;
+  top: 1vw;
+  right: 1.5vw;
+  cursor: pointer;
+}
+
+.section1 .workContainer .registrationContainer .formContainer .calIcon img {
+  width: 1.5vw;
+  height: auto;
+}
+
 @media screen and (orientation: portrait) {
   .section1 {
     margin-top: 14vw;
@@ -344,5 +386,22 @@
 
   .section1 .workContainer .registrationContainer .formContainer .agreement {
     font-size: 2.5vw;
+  }
+
+  .section1 .workContainer .registrationContainer .formContainer .calIcon {
+    top: 2.5vw;
+    right: 3.5vw;
+  }
+
+  .section1 .workContainer .registrationContainer .formContainer .calIcon img {
+    width: 3.5vw;
+  }
+
+  .section1
+    .workContainer
+    .registrationContainer
+    .formContainer
+    .customInlineCalendar {
+    top: -30vw;
   }
 }
