--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -268,6 +268,14 @@
   color: #ffffff;
 }
 
+.section1 .workContainer .registrationContainer .formContainer .loginError {
+  color: #f00;
+  margin-top: 0.3vw;
+  font-size: 1vw;
+  text-shadow: 0.1vw 0.1vw 0.1vw rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
 @media screen and (orientation: portrait) {
   .section1 {
     margin-top: 14vw;
